Fix file in repo converting html content into inline code

--- a/pages/compare-add-del.html
+++ b/pages/compare-add-del.html
@@ -28,7 +28,7 @@
 </div>
 
 <script>
-  var repoURL = "https://github.com/C-YanHua/CS3201-T04";
+  var repoURL = "https://github.com/lnxz/GitGuard";
   var api = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com";
   var url = api + "/authorsAdditionsDeletions?repo=" + repoURL;
   
