--- a/pages/ActivityOverTime.html
+++ b/pages/ActivityOverTime.html
@@ -16,13 +16,82 @@
 
 <!-- load the d3.js library -->
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<link href="../css/nv.d3.css" rel="stylesheet" type="text/css">
+<script src="../js/nv.d3.js"></script>
 <svg width="960" height="500"></svg>
 <script>
 
 
 //git log --pretty=format:%aD" --date=short
 //returns a list of commit dates to sum up to get activity over time
+//getData();
+var repoUrl = "https://github.com/lnxz/GitGuard";
+var url = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com/commitCount?repo=https://github.com/lnxz/GitGuard";
 
+d3.json('cumulativeLineData.json', function(data) {
+  console.log(data);
+  var newData = Array();
+  for(var i = 0; i < data.length; i ++)
+  {
+    if (newData.length == 0)
+    {
+
+    }
+  }
+
+  nv.addGraph(function() {
+    var chart = nv.models.cumulativeLineChart()
+                  .x(function(d) { return d[0] })
+                  .y(function(d) { return d[1]/100 }) //adjusting, 100% is 1.00, not 100 as it is in the data
+                  .color(d3.scale.category10().range())
+                  .useInteractiveGuideline(true)
+                  ;
+
+     chart.xAxis
+        .tickValues([1078030800000,1122782400000,1167541200000,1251691200000])
+        .tickFormat(function(d) {
+            return d3.time.format('%x')(new Date(d))
+          });
+
+    chart.yAxis
+        .tickFormat(d3.format(',.1%'));
+
+    d3.select('#chart svg')
+        .datum(data)
+        .call(chart);
+
+    //TODO: Figure out a good way to do this automatically
+    nv.utils.windowResize(chart.update);
+
+    return chart;
+  });
+});
+/*
+
+function getData()
+{
+  var url = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com/commitCount?repo=https://github.com/lnxz/GitGuard";
+  return d3.json(url, function(response) {
+    console.log(response);
+    var parseTime = d3.timeParse("%d-%B-%y");
+    var data = new Array();
+    for (var i = 0; i < response.length; i++) {
+      var obj = {
+        date: parseTime(response[i].date),
+        count: parseFloat(response[i].commit_count)
+      }
+      data.push(obj);
+    }
+    data.sort(function(a,b) {
+      a = new Date(a.date);
+        b = new Date(b.date);
+        return b>a ? -1 : b<a ? 1 : 0;
+    })
+    console.log("testtest",data);
+  })
+}
+*/
+/*
 var data = {
   "members": [
     {date: "05-Nov-16"},
@@ -81,65 +150,7 @@ dataArr.sort(function(a,b) {
     return b>a ? -1 : b<a ? 1 : 0;
 });
 
-console.log(dataArr);
-var dataString = d3.csvFormat(dataArr, ["date","count"]);
-console.log(dataString);
-
-var svg = d3.select("svg"),
-    margin = {top: 20, right: 20, bottom: 30, left: 50},
-    width = +svg.attr("width") - margin.left - margin.right,
-    height = +svg.attr("height") - margin.top - margin.bottom,
-    g = svg.append("g").attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-    var parseTime = d3.timeParse("%d-%b-%y");
-
-var x = d3.scaleTime()
-    .rangeRound([0, width]);
-
-var y = d3.scaleLinear()
-    .rangeRound([height, 0]);
-
-var line = d3.line()
-    .x(function(d) { return x(d.date); })
-    .y(function(d) { return y(d.close); });
-/*
-d3.csv("https://raw.githubusercontent.com/lnxz/GitGuard/master/pages/test.tsv?token=AK64dOJHdil8K1SWB7Gmc3lXVEBMsW9Jks5YKKxHwA%3D%3D", function(d) {
-console.log(d);
-  d.date = parseTime(d.date);
-  d.close = +d.close;
-  return d;
-}, function(error, data) {
-  if (error) throw error;
-  data.sort(function(a,b) {
-    a = new Date(a.date);
-      b = new Date(b.date);
-      return a>b ? -1 : a<b ? 1 : 0;
-  });
 */
 
-  x.domain(d3.extent(dataArr, function(d) { return d.date; }));
-  y.domain(d3.extent(dataArr, function(d) { return d.close; }));
-
-  g.append("g")
-      .attr("class", "axis axis--x")
-      .attr("transform", "translate(0," + height + ")")
-      .call(d3.axisBottom(x));
-
-  g.append("g")
-      .attr("class", "axis axis--y")
-      .call(d3.axisLeft(y))
-    .append("text")
-      .attr("fill", "#000")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", "0.71em")
-      .style("text-anchor", "end")
-      .text("Activity");
-
-  g.append("path")
-      .datum(dataArr)
-      .attr("class", "line")
-      .attr("d", line);
-
-//});
 </script>
 </body>
