--- a/pages/ActivityOverTime.html
+++ b/pages/ActivityOverTime.html
@@ -32,8 +32,8 @@
 //returns a list of commit dates to sum up to get activity over time
 //getData();
 
-var repoUrl = "https://github.com/lnxz/GitGuard";
-//var repoUrl = "https://github.com/scrapy/scrapy";
+//var repoUrl = "https://github.com/lnxz/GitGuard";
+var repoUrl = "https://github.com/scrapy/scrapy";
 getData(repoUrl);
 function getData(repoUrl)
 {
