--- a/pages/StabilityTable.html
+++ b/pages/StabilityTable.html
@@ -22,6 +22,7 @@ td, th {
 
   <script>
   var repoUrl = "https://github.com/lnxz/GitGuard";
+  //var repoUrl = "https://github.com/scrapy/scrapy";
   getData();
 
 function getData()
@@ -78,12 +79,16 @@ function processData(data, dataPersist){
         lines = dataPersist[j].lines;
       }
     }
+    if(lines == 0)
+    {
+      lines =  parseFloat(data[i].additions)/2;
+    }
     var obj = {
       Name: data[i].name,
       additions: parseFloat(data[i].additions),
       deletions: parseFloat(data[i].deletions),
       LinesPersist: lines,
-      Stability: lines*100/(parseFloat(data[i].additions)+parseFloat(data[i].deletions))
+      Stability: parseFloat(lines*100/(parseFloat(data[i].additions)+parseFloat(data[i].deletions))).toFixed(2)
     };
     dataArr.push(obj);
   }
