--- a/pages/StackedBarVisualization.html
+++ b/pages/StackedBarVisualization.html
@@ -55,7 +55,7 @@
 	<script>
 
 	//Retrieve JSON data
-	var repoUrl = "https://github.com/tungnk1993/scrapy";
+	var repoUrl = "https://github.com/lnxz/GitGuard";
   getData();
 	function getData()
 	{
