--- a/index.html
+++ b/index.html
@@ -5,63 +5,55 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/simple-sidebar.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="/js/gitguard.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
-<body style="height:1500px">
+<body style="height: 100%; overflow: hidden;">
+  
+<script>
+var repoURL = "";
+var prevPage = "";
 
+$( document ).ready(function() {
+  promptRepo();
+});
+
+function promptRepo() {
+  repoURL = prompt("Enter a git repository url");
+  
+  if (repoURL != null) {
+    $("a:gt(0)").each(function() {
+      var elem = $(this);       
+      var _href = elem.attr("href");
+      if (_href.indexOf('?') == -1) {
+      } else {
+        _href = _href.substr(0,_href.indexOf('?'));
+      }
+      elem.attr("href", _href + '?repo=' + repoURL);
+    });
+  } else {
+    promptRepo();
+  }
+}
+</script>
+  
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#" style="width:200px">GIT Guard</a>
-    </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Summary</a></li>
-      <li><a href="./pages/compare.html">Compare</a></li>
-      <li><a href="#">File History</a></li>
-      <li><a href="#">Members LOC</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <li class="active"><a onclick="promptRepo()">GIT Guard</a></li>
+      <li><a href="pages/ActivityOverTime.html" target="iframe_body">Activity</a></li>
+      <li><a href="pages/TopTenContributors.html" target="iframe_body">Top Contributors</a></li>
+      <li><a href="pages/StabilityTable.html" target="iframe_body">Stability Stats</a></li>
+      <li><a href="pages/Compare.html" target="iframe_body">Compare</a></li>
+      <li><a href="pages/RepositoryFiles.html" target="iframe_body">Repository Files</a></li>
+      <li><a href="pages/LargestFiles.html" target="iframe_body">Largest Files</a></li>
     </ul>
   </div>
 </nav>
   
-<div id="wrapper">
-  <!-- Sidebar -->
-  <div id="sidebar-wrapper">
-    <ul class="sidebar-nav">
-      <li>
-        <a href="#">Repo 1</a>
-      </li>
-      <li>
-        <a href="#">Repo 2</a>
-      </li>
-    </ul>
-  </div>
-  <!-- /#sidebar-wrapper -->
-
-  <!-- Page Content -->
-  <div id="page-content-wrapper">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-lg-12">
-          <h1 id="title">alsdkjaslda</h1>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-          <p>MANY MANY CHARTS HERE</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- /#page-content-wrapper -->
+<div style="position:absolute; left: 0; right: 0; bottom: 0; top: 50px;">
+  <iframe height="100%" width="100%" src="pages/home.html" name="iframe_body"></iframe>
 </div>
+  
 
 </body>
 </html>
