--- a/pages/Compare.html
+++ b/pages/Compare.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-  <h1>Largest files in repo</h1>
+  <h1>Compare</h1>
   <div>
     <div>
       <select id='custom-headers' multiple='multiple' class='searchable'></select>
@@ -66,7 +66,16 @@
     </div>
   </div>
 <script>
-  var repoURL = "https://github.com/scrapy/scrapy.git";
+  function gup( name, url ) {
+    if (!url) url = location.href;
+    name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
+    var regexS = "[\\?&]"+name+"=([^&#]*)";
+    var regex = new RegExp( regexS );
+    var results = regex.exec( url );
+    return results == null ? null : results[1];
+  }
+
+  var repoURL = gup('repo', window.location.href);
   var api = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com";
   var url = api + "/authors?repo=" + repoURL;
   
