--- a/pages/LargestFiles.html
+++ b/pages/LargestFiles.html
@@ -129,7 +129,16 @@
       });
     };
     
-    var repoURL = "https://github.com/lnxz/GitGuard";
+    function gup( name, url ) {
+      if (!url) url = location.href;
+      name = name.replace(/[\[]/,"\\\[").replace(/[\]]/,"\\\]");
+      var regexS = "[\\?&]"+name+"=([^&#]*)";
+      var regex = new RegExp( regexS );
+      var results = regex.exec( url );
+      return results == null ? null : results[1];
+    }
+
+    var repoURL = gup('repo', window.location.href);
     var api = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com";
     var url = api + "/fileStats?repo=" + repoURL + "&topN=10";
     
