--- a/pages/home.html
+++ b/pages/home.html
@@ -2,6 +2,6 @@
 <head>
 </head>
 <body>
-<img src="../img/home.JPG"/>
+<img style="margin: auto; display: block; height: 30%; padding-top: 10%; vertical-align: middle;" src="../img/logo.JPG"/>
 </body>
 </html>
