--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ $(document).ready(function() {
     document.getElementById('iframe_body').src = document.getElementById('iframe_body').src;
   });
   
-  promptEmail();
+  //promptEmail();
 });
 
 function promptEmail() {
