--- a/pages/Compare.html
+++ b/pages/Compare.html
@@ -45,7 +45,7 @@
 </head>
 
 <body>
-  <h1>Compare</h1>
+  <h1>Compare Commits</h1>
   <div>
     <div>
       <select id='custom-headers' multiple='multiple' class='searchable'></select>
