--- a/pages/LargestFiles.html
+++ b/pages/LargestFiles.html
@@ -5,7 +5,7 @@
     <title>Repository files</title>
     <script src="../js/Chart.bundle.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <style>
       #canvas-holder {
         width: 100%;
