--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
   input.repo-input {
     box-sizing: border-box;
@@ -99,7 +100,13 @@ function subscribe() {
       <li><a href="pages/ActivityOverTime.html" target="iframe_body">Activity</a></li>
       <li><a href="pages/TopTenContributors.html" target="iframe_body">Top Contributors</a></li>
       <li><a href="pages/StabilityTable.html" target="iframe_body">Stability Stats</a></li>
-      <li><a href="pages/Compare.html" target="iframe_body">Compare</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" type="button">Dropdown <span class="caret"></span></a>
+        <ul class="dropdown-menu">
+          <li><a href="pages/Compare.html" target="iframe_body">Commits</a></li>
+          <li><a href="pages/Compare-add-del.html" target="iframe_body">Addtions/Deletions</a></li>
+        </ul>
+      </li>
       <li><a href="pages/RepositoryFiles.html" target="iframe_body">Repository Files</a></li>
       <li><a href="pages/LargestFiles.html" target="iframe_body">Largest Files</a></li>
     </ul>
