--- a/pages/ActivityOverTime.html
+++ b/pages/ActivityOverTime.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<style>
+<html>
+<head>
+  <style>
     text {
         font: 12px sans-serif;
     }
@@ -14,11 +16,13 @@
         height: 100%;
     }
 </style>
+</head>
 <body>
+  <h1>Respository Activity</h1>
   <div id="chart1">
       <svg></svg>
   </div>
-<!-- load the d3.js library -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link href="../css/nv.d3.css" rel="stylesheet" type="text/css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js" charset="utf-8"></script>
 <script src="../js/nv.d3.js"></script>
@@ -178,5 +182,5 @@ function graphRender (data){
 }
 
 </script>
-
 </body>
+</html>
