--- a/pages/RepositoryFiles.html
+++ b/pages/RepositoryFiles.html
@@ -5,6 +5,7 @@
   <!-- Required Stylesheets -->
   <link rel="stylesheet" href="../css/jstree.min.css"/>
   <link rel="stylesheet" href="../css/highlight-default.css"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!-- Required Javascript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -75,7 +76,7 @@
 <body>
 
 
-<h1 id="repoUrl"></h1>  
+<h1>Files in Repository</h1>  
 <div id="jstree" style="margin-top: 20px; margin-right: 10px; float: left;"></div>
 <div style="margin-top: 20px; float: left;">
   <table id="file-contents">
@@ -100,8 +101,6 @@
   var repoURL = gup('repo', window.location.href);
   var api = "http://ec2-54-169-173-47.ap-southeast-1.compute.amazonaws.com";
   var url = api + "/files?repo=" + repoURL;
-  
-  $('#repoUrl').text(repoURL);
   
   $.getJSON(url, function(response) {
     response.sort(function(a,b) {
