--- a/pages/TopTenContributors.html
+++ b/pages/TopTenContributors.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="../css/nv.d3.css" rel="stylesheet" type="text/css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.2/d3.min.js" charset="utf-8"></script>
   <script src="../js/nv.d3.js"></script>
@@ -22,7 +23,7 @@
   </style>
 </head>
 <body>
-
+<h1>Top Contributors</h1>
 <div id="viz">
   <svg></svg>
 </div>
